--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -4,11 +4,11 @@
     grid-template-rows: repeat(3, 1fr);
     border: 1px solid black;
     width: 55%;
-    height: 50vh;
+    height: 70vh;
     background-color: rgb(20, 18, 18);
     border-radius: 15px;
     opacity: 0.95;
-    margin: 50px 0 0 0;
+    margin: 60px 0 0 0;
 }
 .container p {
     margin: 25px 25px 0 25px;
@@ -18,4 +18,12 @@
 .container img {
     width: 7%;
     padding: 5px;
+}
+
+@media (max-width: 1000px) {
+    .container {
+        margin: 0;
+        height: 100vh;
+        margin-bottom: 2px;
+    }
 }
