--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -57,3 +57,28 @@
     align-items: center;
     justify-content: center;
 }
+@media (max-width: 1000px) {
+    .footer {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+    }
+    .group-1 {
+        display: grid;
+        grid-column: 2/3;
+        grid-row: 1/3;        
+    }
+    .group-1 p {
+        margin: -25px 0;
+    }
+    .about {
+        display: grid;
+        grid-column: 4/5;
+        grid-row: 1/2;
+    }
+    .group-2 {
+        display: grid;
+        grid-column: 2/5;
+        grid-row: 3/4;
+    }
+}
