--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -1,29 +1,103 @@
-.container {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    border: 1px solid black;
-    width: 55%;
-    height: 70vh;
-    background-color: rgb(20, 18, 18);
-    border-radius: 15px;
-    opacity: 0.95;
-    margin: 60px 0 0 0;
-}
-.container p {
-    margin: 25px 25px 0 25px;
-    color: #fff;
-    text-align: justify;
-}
-.container img {
-    width: 7%;
-    padding: 5px;
-}
-
 @media (max-width: 1000px) {
     .container {
-        margin: 0;
-        height: 100vh;
-        margin-bottom: 2px;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        background-color: rgb(20, 18, 18);
+        border: 1px solid black;        
+        width: 65%;
+        height: max-content;
+        border-radius: 15px;
+        opacity: 0.95;
+        margin:  0 0 25px 0;
     }
+    .content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .text {
+        margin: 15px 25px 0 25px;
+    }
+    .text p{
+        color: #fff;
+    }
+    .containerImg {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        padding: 25px;
+        margin-left: 25px;
+    }
+    .containerImg img {
+        width: 50%;        
+    }
+}
+@media (min-width: 1001px) {
+    .container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        background-color: rgb(20, 18, 18);
+        border: 1px solid black;        
+        width: 65%;
+        height: max-content;
+        border-radius: 15px;
+        opacity: 0.95;
+        margin:  0 0 25px 0;
+    }
+    .content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .text {
+        margin: 15px 25px 0 25px;
+    }
+    .text p{
+        color: #fff;
+    }
+    .containerImg {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        padding: 25px;
+        margin-left: 50px;
+    }
+    .containerImg img {
+        width: 25%;        
+    }    
+}
+@media (min-width: 1300px) {
+    .container {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        background-color: rgb(20, 18, 18);
+        border: 1px solid black;        
+        width: 65%;
+        height: max-content;
+        border-radius: 15px;
+        opacity: 0.95;
+        margin:  0 0 25px 0;
+    }
+    .content {
+        display: grid;
+        grid-column: 2/5;
+    }
+    .text {
+        margin: 15px 25px 0 25px;
+    }
+    .text p{
+        color: #fff;
+    }
+    .containerImg {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        padding: 15px;
+        margin-left: 50px;
+    }
+    .containerImg img {
+        width: 35%;
+    }    
 }
