--- a/src/Components/Home/Home.module.css
+++ b/src/Components/Home/Home.module.css
@@ -1,4 +1,33 @@
-.container {
+@media (max-width: 1024px) {
+    .container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .container img {
+        display: flex;
+        flex-direction: column;        
+        justify-self: center;
+        width: 125px;
+        height: 150px;
+        border-radius: 50%;
+        border: 1px solid #fff;
+    }
+    .content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .content h2 {
+        font-size: 22px;
+    }
+    .content h4 {
+        font-size: 18px;
+    }
+}
+
+@media (min-width: 1280px) {
+    .container {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -6,16 +35,17 @@
     justify-content: space-evenly;
     margin: 25px 0;
     width: 65%;    
-}
-.container img {    
-    position: relative;
-    width: 125px;
-    height: 150px;
-    border-radius: 50%;
-    border: 5px solid black;    
-}
-.content {
-    display: flex;
-    flex-direction: column;
-    align-self: center;
+    }
+    .container img {    
+        position: relative;
+        width: 125px;
+        height: 150px;
+        border-radius: 50%;
+        border: 1px solid #fff;
+    }
+    .content {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+    }
 }
