--- a/src/Styles/Container.css
+++ b/src/Styles/Container.css
@@ -1,11 +1,60 @@
-.container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    border: 1px solid black;
-    width: 55%;
-    height: 45vh;
-    background-color: rgb(20, 18, 18);
-    border-radius: 15px;
-    opacity: 0.95;
+@media (max-width: 1024px) {
+    .container {
+        display: flex;        
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .container img {
+        width: 55%;
+        height: 55%;
+    }
+    .container p {
+        color: #fff;
+    }
+}
+
+@media (min-width: 1280px) {
+    .container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+        border: 1px solid black;
+        width: 55%;
+        height: 120vh;
+        background-color: rgb(20, 18, 18);
+        border-radius: 15px;
+        opacity: 0.95;
+        margin-bottom: 50px;
+    }
+    .container img {
+        width: 25%;
+        height: 25%;
+    }
+    .container a {
+        margin: 5px;
+    }
+    .container p {
+        color: #fff;
+    }
+}
+@media (min-width: 1300px) {
+    .container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+        border: 1px solid black;
+        width: 55%;
+        height: 60vh;
+        background-color: rgb(20, 18, 18);
+        border-radius: 15px;
+        opacity: 0.95;
+        margin-bottom: 50px;
+    }
+    .container img {
+        display: flex;
+        justify-self: flex-start;
+        width: 60%;
+        height: 75%;
+    }
 }
