--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -1,84 +1,130 @@
-.footer {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    height: 18vh;
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
-    font-size: 1.0rem;
-    color: #fff;
-}
-.group-1 {
-    grid-column: 2/3;
-    grid-row: 1/2;
-}
-.group-1 h2 {
-    margin: 10px 0;
-}
-.group-1 p {
-    color: #fff;
-    margin: 5px 0;
-}
-.red-social a {
-    color: #fff;
-}
-.red-social i {
-    display: inline-block;
-    padding: 5px 10px;
-}
-.red-social i:hover {
-    color: #1888ff;
-}
-.about {
-    display: grid;
-    grid-column: 4/5;
-    grid-row: 1/2;
-}
-.about h2 {
-    margin: 10px 0;
-}
-.nav-links {
-    margin: 5px 0;
-    color: #fff;
-}
-.about-me {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;    
-}
-.group-2 {
-    display: grid;
-    grid-column: 3/4;
-    grid-row: 3/4;
-}
-.rights {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-@media (max-width: 1000px) {
+@media (max-width: 600px) {
     .footer {
         display: grid;
-        grid-template-columns: repeat(5, 1fr);
+        grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(3, 1fr);
+        height: 18vh;
+        background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+        font-size: 1.0rem;
+        color: #fff;
     }
     .group-1 {
-        display: grid;
-        grid-column: 2/3;
-        grid-row: 1/3;        
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+    .group-1 h2 {
+        margin: 10px 0 10px 35px;
     }
     .group-1 p {
-        margin: -25px 0;
+        color: #fff;
+        margin: 5px 0 5px 35px;
+    }
+    .red-social a {
+        color: #fff;
+    }
+    .red-social i {
+        display: inline-block;
+        padding: 5px 10px;
+        margin-left: 25px;
+        margin-bottom: 25px;
+    }
+    .red-social i:hover {
+        color: #1888ff;
     }
     .about {
         display: grid;
-        grid-column: 4/5;
-        grid-row: 1/2;
+        grid-column: 3/4;
+        grid-row: 1/2;        
+    }
+    .about-me h2 {
+        margin: 10px 20px;
+    }    
+    .about-me .nav-links {
+        font-size: medium;
+        margin: -35px 0;
+        color: #fff;
     }
     .group-2 {
         display: grid;
-        grid-column: 2/5;
+        grid-column: 1/4;
         grid-row: 3/4;
+    }
+    .rights {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+}
+@media (min-width: 540px) {
+    .footer {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        max-height: 15vh;
+    }
+    .group-1 {
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+    .group-1 h2 {
+        color: #fff;
+        margin: 10px 0 10px 15px;
+    }
+    .group-1 p {
+        color: #fff;
+        margin: 5px 0 5px 15px;
+    }
+    .red-social a {
+        color: #fff;
+    }
+    .red-social i {
+        display: inline-block;
+        padding: 5px 10px;
+        margin-left: 15px;
+        margin-bottom: 25px;
+    }
+    .red-social i:hover {
+        color: #1888ff;
+    }
+    .about {
+        display: grid;
+        grid-column: 4/6;
+        grid-row: 1/2;        
+    }
+    .about-me {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+    }
+    .about-me h2 {
+        color: #fff;
+        margin: 10px 70px;
+    }    
+    .about-me .nav-links {
+        font-size: medium;
+        margin: -15px 0;
+        color: #fff;
+    }
+    .group-2 {
+        display: grid;
+        grid-column: 2/6;
+        grid-row: 3/4;
+        color: #fff;
+    }
+    .rights {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+@media (min-width: 1024px) {    
+    .about-me .nav-links {
+        font-size: medium;
+        margin: 0;
+        color: #fff;
     }
 }
