--- a/src/Components/CV/Button/Button.module.css
+++ b/src/Components/CV/Button/Button.module.css
@@ -15,3 +15,8 @@
     background-color: #fff;
     color: black;
 }
+@media (max-width: 280px) {
+    .button {
+        padding: 10px 15px;
+    }
+}
