--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -39,11 +39,11 @@
         grid-template-columns: repeat(1, 1fr);
         background-color: rgb(20, 18, 18);
         border: 1px solid black;        
-        width: 65%;
+        width: 60%;
         height: max-content;
         border-radius: 15px;
         opacity: 0.95;
-        margin:  0 0 25px 0;
+        margin:  90px 0 25px 0;
     }
     .content {
         display: flex;
